# rust_road_router

./: .gitignore  Cargo.toml  cch_complete.sh  compile.sh  create_grid_trips.sh  create_karlsruhe_trips.sh  create_trips.py  debug.sh  experiments-example-data.sh  experiments-karlsruhe.sh  run_create_random_trips.sh  run_experiments.sh  run_karlsruhe.sh  run_relative_gaps.sh
fastdta/: Cargo.toml  Dockerfile  EXPAND_SUMO_NODES_FEATURE.md  README.md  SUMO_SAMPLE_ROUTER.md  create_random_instances.py  duaIterate.py  multiply_trips.py  remove_trips.py
fastdta/analysis/: analysis.py  common.py  plot_departure_histogram.py  rel_gap_aggregation_comparison.py  rel_gap_single_plot.py  router_aggregation_comparison.py  router_aggregation_to_latex.py  routing_phase_breakdown_by_network.py  routing_phase_comparison.py  simulation_time_to_latex.py  visualize_calibration.py
fastdta/analysis/plots/: __init__.py  base.py  rel_dev_lines.py  rel_gap_averaged.py  rel_gap_by_repetition.py  rel_gap_lines.py  rel_gap_median.py  router_avg_points.py  router_boxplot.py  styles.py  (+5 more)
fastdta/src/: alternative_path_assembler.rs  alternative_paths.rs  benchmark.rs  calibrate_traffic_model.rs  choice.rs  cli.rs  customize.rs  dta_alternative_paths.rs  edge_occupancy.rs  gawron.rs  lib.rs  logger.rs  logit.rs  main.rs  path_processor.rs  postprocess.rs  preprocess.rs  preprocess_routes.rs  query.rs  relative_gap.rs  route.rs  sampled_queries.rs  sampled_queries_sumo.rs  sampler.rs  sumo_routes_writer.rs  sumo_runner.rs  sumo_sample_routing.rs  traffic_model.rs  traffic_model_data.rs  vdf.rs
(+151 files in other folders)
