[package]
name = "fastdta"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
rust_road_router = { path = "../engine" }
conversion = { path = "../conversion" }
rand = { version = "0.9.1" }
anyhow = "1.0.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rayon = "^1.5.1"
scirs2-optimize = "0.1.0-rc.2"
scirs2-core = "0.1.0-rc.1"
ndarray = "0.15"
